--- a/styles.css
+++ b/styles.css
@@ -2,7 +2,7 @@ body {
     font-family: Arial, sans-serif;
     margin: 0;
     padding: 0;
-    background: #f5f5f5;
+    background: rgb(94, 180, 249);
     color: #333;
 }
 
@@ -19,8 +19,8 @@ body {
 }
 
 header h1 {
-    text-align: center;
-    color: #0077cc;
+    text-align: left;
+    color: black;
     margin-bottom: 20px;
 }
 
@@ -49,7 +49,7 @@ input {
 button {
     margin-top: 20px;
     padding: 10px;
-    background-color: #0077cc;
+    background-color:rgb(94, 180, 249);
     color: white;
     border: none;
     border-radius: 5px;
@@ -57,7 +57,7 @@ button {
 }
 
 button:hover {
-    background-color: #005fa3;
+    background-color: rgb(94, 180, 249);
 }
 
 .acciones,
@@ -76,7 +76,7 @@ a:hover {
 }
 
 .top-nav {
-    background-color: #0077cc;
+    background-color:rgb(94, 180, 249);
     padding: 10px;
     text-align: center;
 }
@@ -108,7 +108,7 @@ a:hover {
 .circle {
     --size: 100px;
     --stroke: 10;
-    --color: #0077cc;
+    --color:rgb(94, 180, 249);
     --bg: #e0e0e0;
     --percent: 70;
 
@@ -142,6 +142,6 @@ a:hover {
 
 .progress {
     height: 100%;
-    background-color: #0077cc;
+    background-color:rgb(94, 180, 249);
     transition: width 0.3s ease;
 }
