--- a/styles.css
+++ b/styles.css
@@ -1,16 +1,15 @@
 body {
-    font-family: Arial, sans-serif;
+    font-family: "Nunito", sans-serif;
     margin: 0;
     padding: 0;
     background: rgb(94, 180, 249);
-    color: #333;
+    color: rgb(94, 180, 249);
 }
 
 .container,
 .cliente-container,
 .registro-container,
 .fontanero-container {
-    max-width: 600px;
     margin: 40px auto;
     padding: 20px;
     background: #fff;
@@ -19,14 +18,40 @@ body {
 }
 
 header h1 {
+    font-family: "Poppins", sans-serif;
     text-align: left;
+    color: black;
+    margin-bottom: 20px;
+    font-weight: 700;
+}
+
+h2 {
+    font-family: "Poppins", sans-serif;
+    font-weight: 700;
     color: black;
     margin-bottom: 20px;
 }
 
-main.formulario h2 {
+.boton {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    background-color: rgb(94, 180, 249);
+    color: white;
+    font-family: "Nunito", sans-serif;
+    font-size: 16px;
+    border: 1px solid black;
+    border-radius: 5px;
+    padding: 10px 20px;
+    cursor: pointer;
+    transition: background-color 0.3s ease;
+    width: 200px;
+    height: 40px;
+    margin: 10px;
     text-align: center;
-    margin-bottom: 20px;
+    text-decoration: none;
+    font-weight: 700;
 }
 
 form {
