--- a/styles.css
+++ b/styles.css
@@ -9,7 +9,7 @@ body {
 }
 
 .fondo-azul {
-    background: rgb(94, 180, 249);
+    background: #38b6ff;
     height: 120px;
     width: 100%;
     max-width: 440px;
@@ -19,7 +19,7 @@ body {
 }
 
 .fondo-azul-Administrador {
-    background: rgb(94, 180, 249);
+    background: #38b6ff;
     height: 120px;
     width: 100%;
     max-width: 640px;
@@ -107,12 +107,31 @@ h3 {
     margin-bottom: 20px;
 }
 
+.barra-iconos {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 10px 20px;
+    width: 100%;
+    max-width: 600px;
+    margin: 0 auto;
+}
+
+.Icono-Menu img,
+.Icono-Inicio img {
+    width: 50px;
+    height: auto;
+    object-fit: contain;
+    cursor: pointer;
+}
+
+
 .boton,
 button {
     display: flex;
     justify-content: center;
     align-items: center;
-    background-color: rgb(94, 180, 249);
+    background-color: #38b6ff;
     color: white;
     font-family: "Nunito", sans-serif;
     font-size: 16px;
@@ -128,7 +147,7 @@ button {
 
 .boton:hover,
 button:hover {
-    background-color: rgb(65, 145, 210);
+    background-color: #38b6ff;
 }
 
 form {
@@ -149,7 +168,7 @@ input,
 select {
     font-family: "Nunito", sans-serif;
     font-size: 16px;
-    color: rgb(94, 180, 249);
+    color: #38b6ff;
     padding: 10px;
     margin-top: 5px;
     margin-bottom: 10px;
@@ -174,7 +193,7 @@ a:hover {
 }
 
 .top-nav {
-    background-color: rgb(94, 180, 249);
+    background-color: #38b6ff;
     padding: 10px;
     text-align: center;
     width: 100%;
@@ -207,7 +226,7 @@ a:hover {
 .circle {
     --size: 100px;
     --stroke: 10;
-    --color: rgb(94, 180, 249);
+    --color: #38b6ff;
     --bg: #e0e0e0;
     --percent: 70;
 
@@ -241,11 +260,10 @@ a:hover {
 
 .progress {
     height: 100%;
-    background-color: rgb(94, 180, 249);
+    background-color: #38b6ff;
     transition: width 0.3s ease;
 }
 
-/* TABLAS MODERNAS */
 table {
     width: 100%;
     border-collapse: separate;
@@ -260,7 +278,7 @@ table {
 }
 
 thead {
-    background-color: rgb(94, 180, 249);
+    background-color: #38b6ff;
     color: #fff;
 }
 
