Añadiendo Icono Carrito
Añadiendo Icono del Carrito

--- a/styles.css
+++ b/styles.css
@@ -125,6 +125,14 @@ h3 {
     cursor: pointer;
 }
 
+.Icono-Carrito img {
+    width: 40px;
+    height: auto;
+    object-fit: contain;
+    cursor: pointer;
+    margin-left: 440px;
+}
+
 
 .boton,
 button {
